<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort_time"
        android:title="@string/sort_by_time"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_score"
        android:title="@string/sort_by_score"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        app:showAsAction="never" />
</menu>
